; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_html.c_html_close_paragraph.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_html.c_html_close_paragraph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.html = type { %struct.tag* }
%struct.tag = type { i64, i32, %struct.tag* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @html_close_paragraph(%struct.html* %0) #0 {
  %2 = alloca %struct.html*, align 8
  %3 = alloca %struct.tag*, align 8
  store %struct.html* %0, %struct.html** %2, align 8
  %4 = load %struct.html*, %struct.html** %2, align 8
  %5 = getelementptr inbounds %struct.html, %struct.html* %4, i32 0, i32 0
  %6 = load %struct.tag*, %struct.tag** %5, align 8
  store %struct.tag* %6, %struct.tag** %3, align 8
  br label %7

7:                                                ; preds = %31, %1
  %8 = load %struct.tag*, %struct.tag** %3, align 8
  %9 = icmp ne %struct.tag* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %7
  %11 = load %struct.tag*, %struct.tag** %3, align 8
  %12 = getelementptr inbounds %struct.tag, %struct.tag* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  br label %15

15:                                               ; preds = %10, %7
  %16 = phi i1 [ false, %7 ], [ %14, %10 ]
  br i1 %16, label %17, label %35

17:                                               ; preds = %15
  %18 = load %struct.tag*, %struct.tag** %3, align 8
  %19 = getelementptr inbounds %struct.tag, %struct.tag* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  switch i32 %20, label %29 [
    i32 129, label %21
    i32 128, label %21
    i32 130, label %25
  ]

21:                                               ; preds = %17, %17
  %22 = load %struct.html*, %struct.html** %2, align 8
  %23 = load %struct.tag*, %struct.tag** %3, align 8
  %24 = call i32 @print_tagq(%struct.html* %22, %struct.tag* %23)
  br label %30

25:                                               ; preds = %17
  %26 = load %struct.html*, %struct.html** %2, align 8
  %27 = load %struct.tag*, %struct.tag** %3, align 8
  %28 = call i32 @print_tagq(%struct.html* %26, %struct.tag* %27)
  br label %31

29:                                               ; preds = %17
  br label %31

30:                                               ; preds = %21
  br label %35

31:                                               ; preds = %29, %25
  %32 = load %struct.tag*, %struct.tag** %3, align 8
  %33 = getelementptr inbounds %struct.tag, %struct.tag* %32, i32 0, i32 2
  %34 = load %struct.tag*, %struct.tag** %33, align 8
  store %struct.tag* %34, %struct.tag** %3, align 8
  br label %7

35:                                               ; preds = %30, %15
  ret void
}

declare dso_local i32 @print_tagq(%struct.html*, %struct.tag*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
